# openirisAPI

./: .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  cookie.txt  example_cookie.txt  openirisAPI.py  openirisapi.py  pyproject.toml  requirements.txt  setup.cfg
openirisapi/: __init__.py  openirisapi.py  setup.py  utilities.py
openirisapi/utilities/: utilities.py
