[metadata]
name = openirisapi
version = 0.0.1
author = Sotiris Papadiamantis
author_email = sotirios.papadiamantis@univ-amu.fr
description = A very basic API built upon requests for openiris.io
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.in2p3.fr/sotirios.PAPADIAMANTIS/openirisAPI
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.0


[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    pandas

